--- a/app/assets/components/ui-elements/oj-toolbar.html
+++ b/app/assets/components/ui-elements/oj-toolbar.html
@@ -32,6 +32,7 @@
           height:         25px;
           margin-top:     22px;
           text-transform: uppercase;
+          text-transform: uppercase;
       }
 
       #search {
