Paper review layout

--- a/app/assets/components/ui-elements/stacked-pdf-page.html
+++ b/app/assets/components/ui-elements/stacked-pdf-page.html
@@ -27,6 +27,11 @@
             top:0;
             left:0;
           }
+
+          paper-shadow{
+            top: -1px;
+            left: -2px;
+          }
           canvas{
             /*position:absolute;*/
             /*top:0px;*/
