[#235] Duplicate submit for review button at top of submit page

--- a/app/assets/components/subpages/oj-paper-preview.html
+++ b/app/assets/components/subpages/oj-paper-preview.html
@@ -12,6 +12,7 @@
         <div id="details">
 
           <div id=preview-text>Preview</div>
+          <paper-button raised role='button' on-tap={{submitForReview}}>Submit for review</paper-button>
 
           <div id=title>{{paper_details.title}}</div>
 
