--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -1,7 +1,7 @@
 <polymer-element name='oj-user-tag' attributes='assignment removable showCompleted showColor tagColor' >
 
   <template>
-      <template if={{showCompleted}}><input type=checkbox checked?={{assignment.completed}} onclick="return false;"/></template>
+      <template if="{{showCompleted && assignment.role=='reviewer'}}"><input type=checkbox checked?={{assignment.completed}} onclick="return false;"/></template>
       <span class=name>
           {{assignment.role|capitalize}}
           <template if={{assignment.user}}>
