--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -50,7 +50,7 @@
         }
 
       oj-review-page-header {
-        
+
       }
 
       #pdf-pane {
@@ -67,6 +67,7 @@
 
       oj-annotation-list {
           width: 350px;
+          left: -3px;
       }
 
     </style>
