--- a/app/assets/components/ui-elements/oj-annotation-comments.html
+++ b/app/assets/components/ui-elements/oj-annotation-comments.html
@@ -41,7 +41,7 @@
 
       .comments markdown-content::shadow #renderedContent{
         background-color: white;
-        padding: 10px;
+        padding: 10px 5px 10px 5px;
         margin-bottom: 5px;
       }
 
@@ -55,7 +55,7 @@
           bottom: -26px;
           right:  154px;
           color:  #888;
-          text-transform: lowercase;
+          text-transform: capitalize;
       }
       markdown-text-area::shadow markdown-content::shadow #renderedContent {
           padding: 4px;
