Min-height on open issue

--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -90,6 +90,7 @@
         cursor: pointer;
         font-size: 0.9em;
         padding: 10px 5px 5px 5px;
+        min-height: 25px;
       }
 
       .collapsed .header {
