--- a/app/assets/components/ui-elements/stacked-pdf-page.html
+++ b/app/assets/components/ui-elements/stacked-pdf-page.html
@@ -45,7 +45,7 @@
             top: 0;
             right: 0;
             bottom: 0;
-            color: #000;
+            color: blue;
             width: 100%;
             height: 100%;
             overflow: hidden;
