--- a/app/assets/components/ui-elements/oj-annotation-comments.html
+++ b/app/assets/components/ui-elements/oj-annotation-comments.html
@@ -52,10 +52,11 @@
           width: 100%;
       }
       markdown-text-area::shadow a.toggle {
-          bottom: -26px;
+          bottom: -45px;
           right:  154px;
           color:  #888;
           text-transform: capitalize;
+          font-size: 12px;
       }
       markdown-text-area::shadow markdown-content::shadow #renderedContent {
           padding: 4px;
