--- a/app/assets/components/ui-elements/oj-annotation.html
+++ b/app/assets/components/ui-elements/oj-annotation.html
@@ -146,8 +146,9 @@
           width: 100%;
       }
       markdown-text-area::shadow a.toggle {
-          bottom: -26px;
+          bottom: -45px;
           right:  154px;
+          font-size: 12px;
           color:  #888;
           text-transform: capitalize;
       }
