--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -33,11 +33,18 @@
               </p>
           </div>
 
+          <div class="question">Do you have a LaTeX template</div>
+          <div class="answer">
+              <p>
+                Yes we do. You can download it <a href="/downloads/openjournal.cls" target="_blank">here</a>.
+              </p>
+          </div>
+
 
           <div class="question">Who’s on your editorial board?</div>
           <div class="answer">
               <p style="font-family:monospace">
-                  &lt;linsert list here&gt;
+                  &lt;insert list here&gt;
               </p>
           </div>
 
