Adding advisory board etc

--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -41,11 +41,24 @@
           </div>
 
 
-          <div class="question">Who’s on your editorial board?</div>
+          <div class="question">Who’s behind the Open Journal?</div>
           <div class="answer">
-              <p style="font-family:monospace">
-                  &lt;insert list here&gt;
-              </p>
+            <p>
+              <strong>Editorial Board</strong>
+              <ul>
+                <li><a href="http://www.sussex.ac.uk/profiles/533">Peter Coles</a> (Editor in Chief)</li>
+                <li><a href="http://freelanceastrophysicist.com/">Adam Becker</a> (Managing Editor)</li>
+                <li>Chris Lintott (Editor)</li>
+              </ul>
+
+              <strong>Technical</strong>
+              <ul>
+                <li><a href="http://www.arfon.org/">Arfon Smith</a> (Technical Lead)</li>
+                <li><a href="https://twitter.com/stuart_lynn">Stuart Lynn</a> (Developer)</li>
+                <li><a href="https://github.com/marcrohloff">Marc Rohloff</a> (Developer)</li>
+                <li><a href="https://twitter.com/orbitingfrog">Rob Simpson</a> (Developer)</li>
+              </ul>
+            </p>
           </div>
 
 
