Adding editorial board

--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -48,7 +48,15 @@
               <ul>
                 <li><a href="http://www.sussex.ac.uk/profiles/533">Peter Coles</a> (Editor in Chief)</li>
                 <li><a href="http://freelanceastrophysicist.com/">Adam Becker</a> (Managing Editor)</li>
-                <li>Chris Lintott (Editor)</li>
+                <li><a href="https://www2.physics.ox.ac.uk/contacts/people/lintott">Chris Lintott</a> (Editor)</li>
+                <li><a href="http://www.physics.manchester.ac.uk/people/staff/profile/?ea=sarah.bridle">Sarah Bridle</a></li>
+                <li><a href="https://facultystaff.richmond.edu/~ebunn/">Ted Bunn</a></li>
+                <li><a href="http://www.pedroferreira.co.uk/">Pedro Ferreira</a></li>
+                <li><a href="http://www.roe.ac.uk/~rji/">Rob Ivison</a></li>
+                <li><a href="http://astro.ic.ac.uk/ajaffe/home">Andrew Jaffe</a></li>
+                <li><a href="http://thomaskitching.net/">Tom Kitching</a></li>
+                <li><a href="http://www.physics.usyd.edu.au/~gfl/Home.html">Geraint Lewis</a></li>
+                <li><a href="http://physics.open.ac.uk/~sserjeant/">Stephen Serjeant</a></li>
               </ul>
 
               <strong>Technical</strong>
