Minor revision to the about page

--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -47,7 +47,7 @@
               <strong>Editorial Board</strong>
               <ul>
                 <li><a href="http://www.sussex.ac.uk/profiles/533">Peter Coles</a> (Editor in Chief)</li>
-                <li><a href="http://freelanceastrophysicist.com/">Adam Becker</a> (Managing Editor)</li>
+                <li><a href="http://freelanceastro.com/about">Adam Becker</a> (Managing Editor)</li>
                 <li><a href="https://www2.physics.ox.ac.uk/contacts/people/lintott">Chris Lintott</a> (Editor)</li>
                 <li><a href="http://www.physics.manchester.ac.uk/people/staff/profile/?ea=sarah.bridle">Sarah Bridle</a></li>
                 <li><a href="https://facultystaff.richmond.edu/~ebunn/">Ted Bunn</a></li>
