More proofreading on the about page.

--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -33,7 +33,7 @@
               </p>
           </div>
 
-          <div class="question">Do you have a LaTeX template</div>
+          <div class="question">Do you have a LaTeX template?</div>
           <div class="answer">
               <p>
                 Yes we do. You can download it <a href="/downloads/openjournal.cls" target="_blank">here</a>.
