--- a/app/assets/components/subpages/oj-about-page.html
+++ b/app/assets/components/subpages/oj-about-page.html
@@ -19,7 +19,7 @@
                   <li>Submitting to the Open Journal is as easy as posting your article to the arXiv. Just log in here and enter the arXiv ID number, and you're done!</li>
                   <li>Our novel reviewer interface makes it easy for authors and reviewers to discuss articles. You'll be notified in real time as reviewers make individual comments on your article, dramatically speeding up the process of peer review.</li>
                   <li>Revisions are submitted in the same manner as the original article — simply post a new version of your article to the arXiv.</li>
-                  <li>When your article is accepted, it will appear immediately on the Open Journal’s website. You'll also receive a "badge" on your arXiv abstract page indicating that your article was reviewed by the Open Journal.</li>
+                  <li>When your article is accepted, it will appear immediately on the Open Journal’s website. You'll also receive a DOI, which will appear on the arXiv.</li>
               </ul>
           </div>
 
